--- a/about_me/aboutMe/index.html
+++ b/about_me/aboutMe/index.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="/aboutMe/aboutme.css">
         <meta charset="UTF-8">
-        <a href="../index.html"> &lt;-- Home Page<br><br></a> <!-- ../ makes it go up one file -->
+        <a href="/index.html"> &lt;-- Home Page<br><br></a> <!-- ../ makes it go up one file -->
         <h1>About Logan</h1>
     </head>
     <body>
