--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <!-- link -->
-    <link rel="stylesheet" href= "about_me/aboutMe/index.html">
+    <link rel="stylesheet" href= "about_me/main.css">
     <meta charset="utf-8">
     <title>My WDD 130 Site</title>
 </head>
