--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
     <!-- link -->
     <link rel="stylesheet" href= "about_me/main.css">
     <meta charset="utf-8">
-    <title>My WDD 130 Site</title>
+    <t1>WDD 130</t1>
 </head>
 <body>
-    <h1>My Title 130</h1>
-    <p>Hi my name is wikiwiki 
-        slim shady
+    <h1>Logan Bell's Really Cool Website:</h1>
+    <p>Pages:
     </p>
     <ul>
-        <li><a href="/aboutMe/index.html">about me</a> </li>
+        <li><a href="/about_me/aboutMe/index.html">about me</a> </li>
     </ul>
     <!-- <pre>Hi my name is wikiwiki 
         slim shady
@@ -20,6 +19,6 @@
     <!-- <img alt="pic of money" src="Image/IMG_0290.jpg"> -->
 </body>
 <footer>
-    &copy; 2022
+    <!-- &copy; 2022 -->
 </footer>
 </html>
