--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>Pages:
     </p>
     <ul>
-        <li><a href="/about_me/aboutMe/index.html">about me</a> </li>
+        <li><a href="about_me/aboutMe/index.html">about me</a> </li>
     </ul>
     <!-- <pre>Hi my name is wikiwiki 
         slim shady
