--- a/about_me/aboutMe/index.html
+++ b/about_me/aboutMe/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang = "eng">
     <head>
-        <link rel="stylesheet" href="/about_me/aboutMe/aboutme.css">
+        <link rel="stylesheet" href="aboutme.css">
         <meta charset="UTF-8">
-        <script src="/about_me/aboutMe/aboutme.js" defer></script>
+        <script src="aboutme.js" defer></script>
         <a href="/index.html"> &lt;-- Home Page<br><br></a> <!-- ../ makes it go up one file -->
         <h1>About Logan</h1>
     </head>
