--- a/about_me/aboutMe/index.html
+++ b/about_me/aboutMe/index.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="aboutme.css">
         <meta charset="UTF-8">
         <script src="aboutme.js" defer></script>
-        <a href="/index.html"> &lt;-- Home Page<br><br></a> <!-- ../ makes it go up one file -->
+        <a href="../../index.html"> &lt;-- Home Page<br><br></a> <!-- ../ makes it go up one file -->
         <h1>About Logan</h1>
     </head>
     <body>
