--- a/about_me/aboutMe/index.html
+++ b/about_me/aboutMe/index.html
@@ -18,6 +18,8 @@
             buildings at BYUI, they just seem well built. <br> 
             Hopefully I can find a better color scheme next time besides eye gouging blue and disgusting samon...
         </p>
+        <p1>Welcome, today is <strong id="displayToday"></strong></p1>
+        <br>
         <a href="https://store.steampowered.com/app/1800520/Wonky_Wizard/"> Check out my steam game! (Wonky Wizard) </a>
     </body>
 </html>
