--- a/index.html
+++ b/index.html
@@ -12,13 +12,10 @@
     </p>
     <ul>
         <li><a href="about_me/aboutMe/index.html">about me</a> </li>
+        <li><a href="/mission/index.html">mission statement</a> </li>
     </ul>
-    <!-- <pre>Hi my name is wikiwiki 
-        slim shady
-    </pre> -->
-    <!-- <img alt="pic of money" src="Image/IMG_0290.jpg"> -->
 </body>
 <footer>
-    <!-- &copy; 2022 -->
+    &copy; 2022
 </footer>
 </html>
