--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </p>
     <ul>
         <li><a href="about_me/aboutMe/index.html">about me</a> </li>
-        <li><a href="mission/index.html">mission statement</a> </li>
+        <li><a href="../mission/index.html">mission statement</a> </li>
     </ul>
 </body>
 <footer>
