added education page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <ul> 
         <li><a href="about_me/aboutMe/index.html">about me</a> </li>
         <li><a href="mission/index.html">mission statement</a> </li>
+        <li><a href="ICEeducation/education.html">education</a> </li>
     </ul>
 </body>
 <footer>
