--- a/mission/index.html
+++ b/mission/index.html
@@ -15,6 +15,12 @@
     </div>
 </header>
 <body>
+    
+    <select name="themes" id="theme_selector">
+        <option value="light">Light Mode</option>
+        <option value="dark">Dark Mode</option>
+    </select>
+
     <p>Brigham Young University-Idaho was founded and is supported and guided by 
         The Church of Jesus Christ of Latter-day Saints. Its mission is to develop 
         disciples of Jesus Christ who are leaders in their homes, the Church, and their communities.</p>
@@ -25,9 +31,6 @@
         <li>Serving as many students as possible within resource constraints.</li>
         <li>Delivering education that is affordable for students and the Church.</li>
     </ol>
-</body>
-<footer>
     <img class="footPic" src="byui-logo_blue.webp" alt="byui logo at the bottom of page.">
-
-</footer>
+</body>
 </html>
