--- a/mission/index.html
+++ b/mission/index.html
@@ -31,6 +31,6 @@
         <li>Serving as many students as possible within resource constraints.</li>
         <li>Delivering education that is affordable for students and the Church.</li>
     </ol>
-    <img class="footPic" src="byui-logo_blue.webp" alt="byui logo at the bottom of page.">
+    <img class="footPic" id="footPic" src="byui-logo_blue.webp" alt="byui logo at the bottom of page.">
 </body>
 </html>
