--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li><a href="about_me/aboutMe/index.html">about me</a> </li>
         <li><a href="mission/index.html">mission statement</a> </li>
         <li><a href="ICEeducation/education.html">education</a> </li>
+        <li><a href="bookReview/index.html">Book Review Site</a> </li>
     </ul>
 </body>
 <footer>
