--- a/bookReview/index.html
+++ b/bookReview/index.html
@@ -25,7 +25,7 @@
             <p>Genre</p>
             <p>*****</p>
         </div>
-        <div class="middle">
+        <!-- <div class="middle"> -->
             <p class="book_title">Books:</p>
             <img src="" alt="book picture">
             <p>book summary <a href="#">Read More...</a></p>
