--- a/bookReview/index.html
+++ b/bookReview/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="blog.css">
 </head>
 <header>
-    <h1>Kids Read For Fun</h1>
+    <h1 class="title">Kids Read For Fun</h1>
     <nav class="Links">
         <ul>
             <li><a href="#">About</a></li>
