--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <li><a href="about_me/aboutMe/index.html">about me</a> </li>
         <li><a href="mission/index.html">mission statement</a> </li>
         <li><a href="ICEeducation/education.html">education</a> </li>
-        <li><a href="bookReview/index.html">Book Review Site</a> </li>
+        <li><a href="bookReview/index.html">Book Review Site</a></li>
+        <li><a href="creditcard/creditcard.html">Credit Card Page</a></li>
     </ul>
 </body>
 <footer>
