--- a/mission/index.html
+++ b/mission/index.html
@@ -9,6 +9,7 @@
     <script src="mission.js" defer></script>
 </head>
 <header>
+    <a href="/index.html"><--Return Home</a>
     <div class="statment">
         <h1>MISSION STATEMENT</h1>
         <h3>BRIGHAM YOUNG UNIVERSITY-IDAHO </h3>
