--- a/bookReview/index.html
+++ b/bookReview/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="blog.css">
 </head>
 <header>
-    <a href="/index.html"><--Return Home</a>
+    <a href="../index.html"><--Return Home</a>
     <h1 class="title">Kids Read For Fun</h1>
     <nav class="Links">
         <ul>
