--- a/creditcard/creditcard.html
+++ b/creditcard/creditcard.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <header>
-    <a href="/index.html"><--Return Home</a>
+    <a href="../index.html"><--Return Home</a>
 </header>
 <body>
     <h1>Card Info Page</h1>
