added registration page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li><a href="ICEeducation/education.html">education</a> </li>
         <li><a href="bookReview/index.html">Book Review Site</a></li>
         <li><a href="creditcard/creditcard.html">Credit Card Page</a></li>
+        <li><a href="register/index.html">Registration Page</a></li>
     </ul>
 </body>
 <footer>
