--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="bookReview/index.html">Book Review Site</a></li>
         <li><a href="creditcard/creditcard.html">Credit Card Page</a></li>
         <li><a href="register/index.html">Registration Page</a></li>
+        <li><a href="htmlForms/contactus.html">Contact Us</a></li>
     </ul>
 </body>
 <footer>
