--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li><a href="creditcard/creditcard.html">Credit Card Page</a></li>
         <li><a href="register/index.html">Registration Page</a></li>
         <li><a href="htmlForms/contactus.html">Contact Us</a></li>
+        <li><a href="apod/apod.html">Daily Space Pictures</a></li>
     </ul>
 </body>
 <footer>
