made planet work, added final

--- a/apod/apod.html
+++ b/apod/apod.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="apod.css">
-    <script src="apod.js" defer></script>
+    <script src="apod.js" type="module"></script>
 </head>
 <body>
     <div id = "Search">search</div>
-    <div id = "errors">erros</div>
+    <div id = "errors">errors</div>
     <div id = "images">images</div>
 </body>
 <footer>
