--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li><a href="register/index.html">Registration Page</a></li>
         <li><a href="htmlForms/contactus.html">Contact Us</a></li>
         <li><a href="apod/apod.html">Daily Space Pictures</a></li>
+        <li><a href="randomQuote/quote.html">Random Quote</a></li>
     </ul>
 </body>
 <footer>
