adlib ad galaxy pics

--- a/personalWebsiteProject/adlib.html
+++ b/personalWebsiteProject/adlib.html
@@ -5,9 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="adlib.js" defer></script>
+    <link rel="stylesheet" href="adlib.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <section id="wordsLocation"></section>
+    <button id="Finished">Finished</button>
+    <section id="adlibLocation"></section>
 </body>
+<footer>
+    <p id="resource">Thank you to the <a href="https://madlibz.herokuapp.com/api">source 1</a> <a href="http://madlibz.herokuapp.com/api/random">source 2</a>!</p>
+</footer>
 </html>
