--- a/randomQuote/quote.html
+++ b/randomQuote/quote.html
@@ -29,6 +29,6 @@
 </head>
 <body>
     <section id="quoteContainer"></section>
-    <!-- <button id=""></button> -->
+    <button id="reset">new quote</button>
 </body>
 </html>
