--- a/apod/apod.html
+++ b/apod/apod.html
@@ -9,9 +9,19 @@
     <script src="apod.js" type="module"></script>
 </head>
 <body>
-    <div id = "Search">search</div>
-    <div id = "errors">errors</div>
-    <div id = "images">images</div>
+    <h1>Home</h1>
+    <h2>NASA Astronomy Picture of the Day (APOD)</h2>
+    <div id = "Search"> 
+            <label for="dateInput">Date</label>
+            <input type="text" name="dateInput" id="">
+            <button id="getImgButton">Get Image</button>
+    </div>
+    <div id = "errors">
+        Alert Message Here
+    </div>
+    <div id = "images">
+        images
+    </div>
 </body>
 <footer>
     <a href="https://apod.nasa.gov/apod/astropix.html">NASA Source</a>
