--- a/apod/apod.html
+++ b/apod/apod.html
@@ -17,10 +17,10 @@
             <button id="getImgButton">Get Image</button>
     </div>
     <div id = "errors">
-        Alert Message Here
+        <p>Alert Message Here</p>
     </div>
     <div id = "images">
-        images
+        
     </div>
 </body>
 <footer>
