--- a/apod/apod.html
+++ b/apod/apod.html
@@ -13,7 +13,7 @@
     <h2>NASA Astronomy Picture of the Day (APOD)</h2>
     <div id = "Search"> 
             <label for="dateInput">Date</label>
-            <input type="text" name="dateInput" id="">
+            <input type="text" name="dateInput" id="dateInput">
             <button id="getImgButton">Get Image</button>
     </div>
     <div id = "errors">
