--- a/personalWebsiteProject/adlib.html
+++ b/personalWebsiteProject/adlib.html
@@ -8,10 +8,16 @@
     <link rel="stylesheet" href="adlib.css">
     <title>Document</title>
 </head>
+<header>
+    <h1>Adblib Personal Project</h1>
+    <p>Make sure to fill out every value in this form before clicking the 'finished' button.</p>
+</header>
 <body>
     <section id="wordsLocation"></section>
     <button id="Finished">Finished</button>
-    <section id="adlibLocation"></section>
+    <section id="errors"></section>
+    <div id="FinalAdlibLocation"></div>
+    <div id ="ResetButtonlocation"></div>
 </body>
 <footer>
     <p id="resource">Thank you to the <a href="https://madlibz.herokuapp.com/api">source 1</a> <a href="http://madlibz.herokuapp.com/api/random">source 2</a>!</p>
