Added to index and checked for inputs

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <li><a href="htmlForms/contactus.html">Contact Us</a></li>
         <li><a href="apod/apod.html">Daily Space Pictures</a></li>
         <li><a href="randomQuote/quote.html">Random Quote</a></li>
+        <li><a href="personalWebsiteProject/adlib.html">Adlib Personal Project</a></li>
     </ul>
 </body>
 <footer>
