--- a/personalWebsiteProject/adlib.html
+++ b/personalWebsiteProject/adlib.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <header>
-    <h1>Adblib Personal Project</h1>
+    <h1><i>Random Adblib</i> Personal Project</h1>
     <p>Make sure to fill out every value in this form before clicking the 'finished' button.</p>
 </header>
 <body>
@@ -20,6 +20,6 @@
     <div id ="ResetButtonlocation"></div>
 </body>
 <footer>
-    <p id="resource">Thank you to the <a href="https://madlibz.herokuapp.com/api">source 1</a> <a href="http://madlibz.herokuapp.com/api/random">source 2</a>!</p>
+    <p id="resource">Thank you to  <a href="https://madlibz.herokuapp.com/api">source 1</a>, <a href="http://madlibz.herokuapp.com/api/random">source 2</a>!</p>
 </footer>
 </html>
