--- a/personalWebsiteProject/adlib.html
+++ b/personalWebsiteProject/adlib.html
@@ -9,8 +9,9 @@
     <title>Document</title>
 </head>
 <header>
-    <h1><i>Random Adblib</i> Personal Project</h1>
-    <p>Make sure to fill out every value in this form before clicking the 'finished' button.</p>
+    <p id ="return"><a href="../index.html"><--Return Home</a><p>
+    <h1><i>Random Adlib</i> Personal Project</h1>
+    <p id ="guide">Make sure to fill out every value in this form before clicking the 'finished' button.</p>
 </header>
 <body>
     <section id="wordsLocation"></section>
