--- a/about_me/aboutMe/index.html
+++ b/about_me/aboutMe/index.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="aboutme.css">
         <meta charset="UTF-8">
         <script src="aboutme.js" defer></script>
+
         <a href="../../index.html"> &lt;-- Home Page<br><br></a> <!-- ../ makes it go up one file -->
         <h1>About Logan</h1>
     </head>
@@ -15,11 +16,13 @@
             consist of: going to costco and snatching a cheap slice of pizza, video editing, 
             and gaming. This is my 3rd semester, I'm hoping to graduate with a 
             Computer science BS when I turn 20 in a couple of years. I love the 
-            buildings at BYUI, they just seem well built. <br> 
+            buildings at BYUI, they just seem well built. <br> <br>
             Hopefully I can find a better color scheme next time besides eye gouging blue and disgusting samon...
         </p>
-        <p1>Welcome, today is <strong id="displayToday"></strong></p1>
-        <br>
-        <a href="https://store.steampowered.com/app/1800520/Wonky_Wizard/"> Check out my steam game! (Wonky Wizard) </a>
+        <div id="ender">
+            <p1>Welcome, today is <strong id="displayToday"></strong></p1>
+            <br>
+            <a href="https://store.steampowered.com/app/1800520/Wonky_Wizard/"> Check out my steam game! (Wonky Wizard) </a>
+        </div>
     </body>
 </html>
