--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <a href="register/index.html"><button id="buttons">Registration Page</button></a>
             <a href="Daily Space Pictures"><button id="buttons">Daily Space Pictures</button></a>
             <a href="randomQuote/quote.html"><button id="buttons">Random Quote</button></a>
+            <a href="sitePlan/site_plan.html"><button id="buttons">site-plan</button></a>
             <a href="personalWebsiteProject/adlib.html"><button id="buttons">Adlib Personal Project</button></a>
             
             
